--- a/ifcb-data-pipeline.Rmd
+++ b/ifcb-data-pipeline.Rmd
@@ -249,7 +249,12 @@ for (i in seq_along(params$year)) {
       mutate(gpsLatitude = 58.07500, gpsLongitude = 11.49300)
   } else {
     hdr_data <- all_hdr_data %>%
-      select(sample, gpsLatitude, gpsLongitude, timestamp, date, year, month, day, time, ifcb_number)
+      select(sample, gpsLatitude, gpsLongitude, timestamp, date, year, month, day, time, ifcb_number, gpsTimeFromFix) %>%
+      mutate(gpsTimeFromFix = as.POSIXct(gpsTimeFromFix, format = "%b/%d/%Y %H:%M:%OS", tz = "UTC")) %>%
+      mutate(gpsLatitude = ifelse(abs(difftime(gpsTimeFromFix, timestamp, units = "mins")) > 10, NA, gpsLatitude),
+             gpsLongitude = ifelse(abs(difftime(gpsTimeFromFix, timestamp, units = "mins")) > 10, NA, gpsLongitude)
+      ) %>%
+      select(-gpsTimeFromFix)
   }
 
   missing_position <- hdr_data %>% filter(is.na(gpsLatitude) | is.na(gpsLongitude))
